# pokefight

./: .dir-locals.el  Cargo.toml  flake.nix  test_script.sh
.github/workflows/: nix-build-release.yml
cli/: Cargo.toml
cli/src/: '  cli.rs  display.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs  pokeservice.rs
core/src/models/: battle.rs  pokemon.rs  test_utils.rs  tournament.rs
src/: cli.rs  errors.rs  main.rs  models.rs  pokeservice.rs
src/models/: battle.rs  tournament.rs  tournament_reporter.rs  trainer.rs
web/: Cargo.toml
web/src/: main.rs
web/src/adapters/http/: app_state.rs  mod.rs  router.rs
web/src/adapters/http/routes/: health.rs  mod.rs  tournament.rs
web/src/application/: tournament.rs
web/src/infra/: app_state.rs
