[package]
name = "pokefight-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pokefight_core"
path = "src/lib.rs"

[dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
