[package]
name = "pokefight-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "pokefight_core"
path = "src/lib.rs"

[dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true}
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
